# petrobras-offshore-wells-anomaly-detection-control-charts

./: .bandit  .commitlintrc.json  .cursorrules  .dockerignore  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  .secrets.baseline  .zshrc  .zshrc.local.example  .zshrc.project  AWS_SETUP_SUMMARY.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  DEVCONTAINER_FIXES_SUMMARY.md  DEVCONTAINER_SETUP.md  DEVCONTAINER_SUMMARY.md  DEVCONTAINER_ZSH_SUMMARY.md  Dockerfile  ERRORS_RESOLVED_SUMMARY.md  GEMINI.md  INTEGRATION_SUMMARY.md  MIGRATION_SUMMARY.md  QUICK_SETUP.md  README.md  README.pt-BR.md  README_GEMINI_CLI_OFFICIAL.md  SECURITY_UPDATE_GUIDE.md  SECURITY_UPDATE_SUMMARY.md  WSL2_SOLUTION_SUMMARY.md  ZSH_SETUP_SUMMARY.md  aws-config.yaml  cloudbuild.yaml  compose.gcloud.yml  env.aws.example  env.example  gcp-config.yaml  (+11 more)
.devcontainer/: .p10k.zsh  .zshrc  .zshrc.local.example  .zshrc.project  Dockerfile  README.md  devcontainer.json  post-create.sh  setup_shell.sh  test-setup.sh  test_environment.sh  test_setup.sh  zshrc  zshrc-personal  zshrc.custom  zshrc.local.example  zshrc.project
.docker/: .gitignore  Dockerfile  Dockerfile.gcloud  Dockerfile.gpu  README.md  dev.sh  docker-compose.gcloud.yml  docker-compose.yml  start-app.sh
.docker/zsh/: .zshrc
.docker/zsh/powerlevel10k/: .p10k.zsh
.github/: dependabot.yml
.github/workflows/: black.yml  gcp-auth-test.yml  gcp-setup.yml  gcp-training.yml  gemini-scheduled-triage.yml  publish.yml  security-scan.yml  test-gcp-auth-simple.yml  test-gcp-auth.yml
.history/: pyproject_20250826162651.toml  pyproject_20250826162709.toml  pyproject_20250826162715.toml  pyproject_20250826162907.toml  pyproject_20250826162909.toml  pyproject_20250826162953.toml  pyproject_20250826163029.toml  pyproject_20250826163542.toml  pyproject_20250826163544.toml
config/: 3w_config.yaml  aws-config.yaml  gemini.env.template
deployment/: Dockerfile  dev.Dockerfile  mlflow.Dockerfile  mlflow_server.py
docker/: mlflow.Dockerfile
docs/: 3W_INTEGRATION.md  3W_INTEGRATION.pt-BR.md  3W_OVERVIEW.md  3W_OVERVIEW_EN.md  AUTHORS.md  AUTHORS.pt-BR.md  AWS_SETUP.md  CER-UFBA.md  CLAUDE.md  CLAUDE_CODE_SETUP.md  CONTRIBUTING.md  CONVENTIONAL_COMMITS.md  GCP_AUTH_TROUBLESHOOTING.md  GCP_EDA_SETUP.md  GCP_SETUP.md  GPG_SETUP.md  README.md  README.pt-BR.md  SETUP.md  VSCODE_EXTENSIONS.md  WSL2_TROUBLESHOOTING.md  ZSH_CONFIGURATION.md  gpg_test.md  setup-guide.md  setup-guide.pt-BR.md
examples/: aws_training_example.py  train_lstm_vae_gcp.py
notebooks/: 3W_integration_example.py  gcp_eda_example.ipynb  gcp_eda_example.py  knn.ipynb  knn_example.py  notebook.ipynb  polars.ipynb  polars.py  simple_test.py
scripts/: check_errors.sh  commit-emoji.sh  diagnose_wsl2.sh  fix_gpg_wsl.sh  force_security_update.sh  install_claude_extensions.ps1  install_claude_extensions.py  install_claude_extensions.sh  install_extensions.ps1  install_extensions.py  install_extensions.sh  install_extensions_robust.sh  rebuild_devcontainer.sh  setup_3w_integration.ps1  setup_3w_integration.sh  setup_aws.sh  setup_environment.sh  setup_gcp.sh  setup_gcp_credentials.py  setup_gcp_eda.sh  setup_gcp_workload_identity.sh  setup_gemini_cli.sh  setup_gpg.sh  setup_wsl2.sh  setup_zsh.sh  test_setup.sh  update_dependencies.py  update_dependencies.sh
shell/: README.md
src/: aws_config_manager.py  aws_training.py
src/anomaly_detection/aws/: aws_training.py
src/anomaly_detection/config/: __init__.py  config_manager.py  gcp_env_config.py
src/anomaly_detection/data/: data_loader.py
src/anomaly_detection/gcp/: __init__.py  config.py  training.py  vertex_ai.py
src/anomaly_detection/gcp/tests/: test_config.py
src/aws/: __init__.py  aws_config_manager.py  aws_training.py
src/config/: config_manager.py  gcp_env_config.py  threew_config.py
src/data/: __init__.py  data_loader.py  preprocessing.py  threew_dataset.py
src/gcp/: auth.py  config.py  mlflow_integration.py  storage.py  training.py  vertex_ai.py
src/gcp/tests/: __init__.py  test_config.py
tests/integration/: test_3w_integration.py  test_gcp_config.py
tests/unit/: test_aws_config_manager.py
