[project]
name = "jupyter"
version = "0.1.0"
description = "Jupyter Notebook Template"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "marimo>=0.15.0",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "scikit-learn>=1.7.1",
    "torch>=2.0.1",
    "torchaudio>=2.0.2",
    "torchvision>=0.15.2",
    # ML e treinamento
    "tensorboard>=2.15.0",
    "mlflow>=2.8.0",
    "optuna>=3.4.0",
    "wandb>=0.16.0",
    # Utilitários básicos
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    # Dependências para dados
    "pyarrow>=19.0",
    "h5py>=3.13",
    "tslearn>=0.6",
    "ydata-profiling>=4.15",
    "numba>=0.61",
    "missingno>=0.5",
    "alive-progress>=3.2",
    "natsort>=8.4",
    "plotly>=6.0",
    "pydantic>=2.10",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "pre-commit>=4.3.0",
    "ruff>=0.12.10",
    "uv>=0.8.13",
    # Ferramentas de desenvolvimento para cloud
    # google-cloud-cli e gcloud são instalados via sistema
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu117"
