

[project]
name = "jupyter"
version = "0.1.0"
description = "Jupyter Notebook Template"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "marimo>=0.15.0",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "scikit-learn>=1.7.1",
    "pyod>=1.1.0",
    "torch>=2.0.1",
    "torchaudio>=2.0.2",
    "torchvision>=0.15.2",
    # ML e treinamento
    "tensorboard>=2.15.0",
    "mlflow>=2.8.0",
    "optuna>=3.4.0",
    "wandb>=0.16.0",
    # Utilitários básicos
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    # Dependências para dados
    "pyarrow>=19.0",
    "h5py>=3.13",
    "tslearn>=0.6",
    "ydata-profiling>=4.15",
    "numba>=0.61",
    "missingno>=0.5",
    "alive-progress>=3.2",
    "natsort>=8.4",
    "plotly>=6.0",
    "pydantic>=2.10",
    # Dependências de segurança serão resolvidas automaticamente
    "pre-commit>=4.3.0",
    "mypy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "commitizen>=3.0.0",
    "commitlint>=0.18.0",
]

[dependency-groups]
dev = [
    "google-cloud-aiplatform>=1.111.0",
    "google-cloud-logging>=3.12.1",
    "google-cloud-monitoring>=2.27.2",
    "google-cloud-storage>=2.19.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
    "uv>=0.8.13",
    # Ferramentas de desenvolvimento para cloud
    # google-cloud-cli e gcloud são instalados via sistema
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu117"
priority = 1

[[tool.uv.index]]
url = "https://pypi.org/simple/"
priority = 2

# Configuração do mypy movida para mypy.ini para evitar conflitos
