[project]
name = "petrobras-offshore-wells-anomaly-detection"
version = "0.1.0"
description = "Petrobras Offshore Wells Anomaly Detection using Control Charts"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "jupyterlab>=4.0.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "notebook>=7.0.0",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "scikit-learn>=1.7.1",
    "pyod>=1.1.0",
    "torch>=2.0.1",
    "torchaudio>=2.0.2",
    "torchvision>=0.15.2",
    # ML e treinamento
    "tensorboard>=2.15.0",
    "mlflow>=2.8.0",
    "optuna>=3.4.0",
    "wandb>=0.16.0",
    # Utilitários básicos
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    # Dependências para dados
    "pyarrow>=19.0",
    "h5py>=3.13",
    "tslearn>=0.6",
    "ydata-profiling>=4.15",
    "numba>=0.61",
    "missingno>=0.5",
    "alive-progress>=3.2",
    "natsort>=8.4",
    "plotly>=6.0",
    "pydantic>=2.10",
    # Dependências de segurança serão resolvidas automaticamente
    "pre-commit>=4.3.0",
    "mypy>=1.17.1",
    "ruff>=0.12.11",
    "pytest>=8.4.1",
    "google-cloud-aiplatform>=1.111.0",
    "google-cloud-logging>=3.12.1",
    "google-cloud-monitoring>=2.27.2",
    "google-cloud-storage>=2.19.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "sagemaker>=2.226.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "commitizen>=3.0.0",
    "commitlint>=0.18.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[dependency-groups]
dev = [
    "google-cloud-aiplatform>=1.111.0",
    "google-cloud-logging>=3.12.1",
    "google-cloud-monitoring>=2.27.2",
    "google-cloud-storage>=2.19.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.10",
    "uv>=0.8.13",
    # Ferramentas de desenvolvimento para cloud
    # google-cloud-cli e gcloud são instalados via sistema
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu117"
priority = 1

[[tool.uv.index]]
url = "https://pypi.org/simple/"
priority = 2

[tool.bandit]
exclude_dirs = ["tests", "examples", "notebooks", "scripts"]
skips = ["B101", "B601"]
targets = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "notebooks.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "data.*"
ignore_missing_imports = true
